src/compile_test/must_fail/bad_bounds_2.stderr
error[E0308]: mismatched types
 --> $DIR/bad_bounds_2.rs:4:25
  |
4 |     let _ok: BoundedInt<'a',255> = 3.into();
  |                         ^^^ expected `i64`, found `char`
