src/compile_test/must_fail/bad_bounds_2.rs
use bounded_types::*;

fn main() {
    let _ok: BoundedInt<'a',255> = 3.into();
}